<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Sign to continue</string>
    <string name="title_login_page">Welcome Back</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>
    <string name="text_register">Don\'t have account?</string>
    <string name="text_register_button">create a new account</string>
    <string name="story">Story</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="title_signup_page">Register an account</string>
    <string name="content_description">add your description</string>
    <string name="insert_image">Please, insert image</string>
    <string name="retry">Try again</string>
    <string name="maps">Maps</string>
    <string name="title_activity_story_with_maps">Story With Maps</string>
    <string name="use_location">Use location</string>
    <string name="not_have_permission">Not have permission</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>