<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/margin_16"
    android:layout_marginRight="@dimen/margin_16"
    android:layout_marginBottom="@dimen/margin_16"
    card_view:cardCornerRadius="10dp"
    android:id="@+id/cardview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@color/black"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_image"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_4"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/description"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/date"
            android:textSize="12sp"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_image"
            card_view:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>